--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "browser-react-zoom",
+  "name": "tic-tac-toe",
   "version": "1.0.0",
-  "description": "ZoOm Minimal Sample App Using React",
+  "description": "Tic Tac Toe",
   "main": "index.js",
   "scripts": {
     "deploy-production": "webpack --mode production",
@@ -9,9 +9,9 @@
     "start": "webpack-dev-server --mode development --open --hot"
   },
   "keywords": [],
-  "author": "Facetec, Inc.",
-  "license": "ISC",
+  "author": "Pooja Guggari",
   "dependencies": {
+    "@babel/cli": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -27,12 +27,14 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
     "eslint-plugin-mocha": "^5.3.0",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.7.1"
   }
 }
